# blog

./: .gitignore  Cargo.toml  README.md  create_tables.sql
client/: Caddyfile  Cargo.toml  Trunk.toml  index.html
client/src/: app.rs  constants.rs  fetch.rs  main.rs  utils.rs
client/src/components/: card.rs  container.rs  home.rs  markdown_editor.rs  mod.rs  modal.rs  not_found.rs
client/src/components/article/: article_preview.rs  article_viewer.rs  articles.rs  delete.rs  edit.rs  mod.rs  new.rs  preview.rs  view.rs
client/src/components/comment/: delete.rs  mod.rs  new.rs  view.rs
client/src/components/user/: login.rs  mod.rs  oauth.rs
client/src/models/: article.rs  comment.rs  user.rs
server/: .env  Cargo.toml  test.html
server/src/: constants.rs  errors.rs  main.rs
server/src/article/: delete.rs  edit.rs  mod.rs  new.rs  search.rs  view.rs
server/src/comment/: delete.rs  mod.rs  new.rs  view.rs
server/src/models/: article.rs  comment.rs  mod.rs  user.rs
server/src/user/: info.rs  login.rs  mod.rs
