[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.60", features = ["Window", "Document"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
